kubernetes/dev-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: authentication-service
  namespace: dev
spec:
    replicas: 1
    selector:
        matchLabels:
          app: authentication-service
    template:
        metadata:
          labels:
            app: authentication-service
        spec:
          containers:
          - name: authentication-service
            image: authentication-service:0.5.0-SNAPSHOT
            ports:
                - containerPort: 8080
          imagePullSecrets:
            - name: byteterm-docker-registry
