kubernetes/dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  namespace: dev
spec:
  selector:
    app: authentication-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
