kubernetes/dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentication-service-ingress
  namespace: dev
spec:
  rules:
    - host: "dev.accounts.vogeez.net"
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: authentication-service
                port:
                  number: 8080
            path: /
